[gd_scene load_steps=18 format=4 uid="uid://cf3n6c2t3dq4u"]

[ext_resource type="Script" uid="uid://dpxrh31iebwo3" path="res://node_2d.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bc5e325gesis2" path="res://0.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cq7iuyp6yu2nx" path="res://1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bscp50jjkgtan" path="res://2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dafe2rudpbnc5" path="res://3.png" id="5"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://ariblk.ttf" id="6"]
[ext_resource type="AudioStream" uid="uid://b54qsdxvp8v5p" path="res://options_volumetest.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://uihover.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://uipress.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://uirelease.wav" id="10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tf0p0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_dkrsm"]
length = 0.0010000000474974513
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_clbfl"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.67),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5ay5"]
_data = {
&"RESET": SubResource("Animation_dkrsm"),
&"fadein": SubResource("Animation_clbfl")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_clbfl"]

[sub_resource type="Theme" id="Theme_fk6kb"]
default_font = ExtResource("6")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("6")
Panel/styles/panel = SubResource("StyleBoxEmpty_clbfl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tf0p0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="zero" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("2")

[node name="one" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 240)
texture = ExtResource("3")

[node name="two" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 240)
texture = ExtResource("4")

[node name="three" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 240)
texture = ExtResource("5")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 640.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tf0p0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
&"": SubResource("AnimationLibrary_v5ay5")
}

[node name="return" type="Button" parent="."]
offset_left = 16.0
offset_top = 448.0
offset_right = 147.0
offset_bottom = 466.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_fk6kb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tf0p0")
text = "Back to World Map"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="OptionsVolumetest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = -16.0
autoplay = true
bus = &"Music"

[node name="Uihover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
volume_db = -10.0
mix_target = 2

[node name="return2" type="Button" parent="."]
visible = false
offset_left = 520.0
offset_top = 448.0
offset_right = 651.0
offset_bottom = 466.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_fk6kb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_tf0p0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tf0p0")
text = "View Credits"
alignment = 0
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="return" to="." method="_on_return_button_down"]
[connection signal="mouse_entered" from="return" to="." method="_on_return_mouse_entered"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="button_down" from="return2" to="." method="_on_return_button_down"]
[connection signal="mouse_entered" from="return2" to="." method="_on_return_mouse_entered"]
[connection signal="pressed" from="return2" to="." method="_on_return_2_pressed"]
